[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Saegl <saegl@protonmail.com>", "Sanzhar <sanzhar.baratov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
httpx = "^0.23.3"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.3"}
python-multipart = "^0.0.5"
pydantic = {extras = ["dotenv"], version = "^1.10.5"}

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.241"
pytest = "^7.2.1"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
